Fix z-index of links note

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4029,6 +4029,7 @@ p b {
 	position: fixed;
 	right: 5px;
 	bottom: 5px;
+	z-index: 10000;
 	height: 79px;
 	width: 200px;
 
